# viperdos

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  kernel.sys  version.h
kernel/: CMakeLists.txt  crt.cpp  kernel.ld  main.cpp
kernel/arch/aarch64/: boot.S  cpu.cpp  cpu.hpp  exceptions.S  exceptions.cpp  exceptions.hpp  gic.cpp  gic.hpp  mmu.cpp  mmu.hpp  timer.cpp  timer.hpp
kernel/assign/: assign.cpp  assign.hpp
kernel/boot/: bootinfo.cpp  bootinfo.hpp
kernel/cap/: handle.hpp  rights.hpp  table.cpp  table.hpp
kernel/console/: console.cpp  console.hpp  font.cpp  font.hpp  gcon.cpp  gcon.hpp  serial.cpp  serial.hpp
kernel/drivers/: fwcfg.cpp  fwcfg.hpp  pl031.cpp  pl031.hpp  ramfb.cpp  ramfb.hpp
kernel/drivers/virtio/: blk.cpp  blk.hpp  gpu.cpp  gpu.hpp  input.cpp  input.hpp  net.cpp  net.hpp  rng.cpp  rng.hpp  sound.cpp  sound.hpp  virtio.cpp  virtio.hpp  virtqueue.cpp  virtqueue.hpp
kernel/dtb/: fdt.cpp  fdt.hpp
kernel/fs/: cache.cpp  cache.hpp  cache_guard.hpp
kernel/fs/fat32/: fat32.cpp  fat32.hpp
kernel/fs/vfs/: vfs.cpp  vfs.hpp
kernel/fs/viperfs/: format.hpp  inode_guard.hpp  journal.cpp  journal.hpp  viperfs.cpp  viperfs.hpp
kernel/include/: config.hpp  constants.hpp  error.hpp  result.hpp  syscall.hpp  syscall_nums.hpp  types.hpp  vboot.hpp
kernel/init/: init.cpp  init.hpp
kernel/input/: input.cpp  input.hpp  keycodes.hpp
kernel/ipc/: channel.cpp  channel.hpp  poll.cpp  poll.hpp  pollset.cpp  pollset.hpp
kernel/kobj/: blob.cpp  blob.hpp  channel.cpp  channel.hpp  dir.cpp  dir.hpp  file.cpp  file.hpp  object.hpp  shm.cpp  shm.hpp
kernel/lib/: crc32.cpp  crc32.hpp  endian.hpp  log.hpp  lru_list.hpp  mem.hpp  spinlock.hpp  str.hpp  timerwheel.cpp  timerwheel.hpp
kernel/loader/: elf.cpp  elf.hpp  loader.cpp  loader.hpp
kernel/mm/: buddy.cpp  buddy.hpp  cow.cpp  cow.hpp  fault.cpp  fault.hpp  kheap.cpp  kheap.hpp  pmm.cpp  pmm.hpp  pressure.cpp  pressure.hpp  slab.cpp  slab.hpp  swap.cpp  swap.hpp  vma.cpp  vma.hpp  vmm.cpp  vmm.hpp
kernel/net/: netstack.cpp  netstack.hpp
kernel/sched/: bandwidth.cpp  bandwidth.hpp  cfs.hpp  context.S  deadline.cpp  deadline.hpp  heap.hpp  idle.cpp  idle.hpp  pi.cpp  pi.hpp  scheduler.cpp  scheduler.hpp  signal.cpp  signal.hpp  task.cpp  task.hpp  wait.cpp  wait.hpp
kernel/syscall/: dispatch.cpp  dispatch.hpp  table.cpp  table.hpp
kernel/syscall/handlers/: assign.cpp  audio.cpp  cap.cpp  channel.cpp  clipboard.cpp  debug.cpp  device.cpp  dir.cpp  file.cpp  gui.cpp  handle_fs.cpp  handlers_internal.hpp  mmap.cpp  net.cpp  poll.cpp  procgroup.cpp  signal.cpp  sysinfo.cpp  task.cpp  thread.cpp  time.cpp  tls.cpp  tty.cpp
kernel/tests/: boot_diagnostics.cpp  boot_diagnostics.hpp  ipc_tests.cpp  storage_tests.cpp  syscall_tests.cpp  tests.hpp  userfault_tests.cpp  viper_tests.cpp
kernel/tty/: tty.cpp  tty.hpp
kernel/viper/: address_space.cpp  address_space.hpp  viper.cpp  viper.hpp
tests/: CMakeLists.txt
tests/boot/: startup.S  toolchain-test.cpp  toolchain-test.ld
tests/host/: test_framework.h  test_sanity.c  test_ssh_crypto.cpp  test_syscall_table.py
tests/tools/: run_qemu_test.sh
user/: CMakeLists.txt  programs.txt  syscall.hpp  user.ld
user/calc/: CMakeLists.txt
user/calc/include/: calc.hpp  ui.hpp
user/calc/src/: calc.cpp  main.cpp  ui.cpp
user/clock/: CMakeLists.txt
user/clock/include/: clock.hpp  ui.hpp
user/clock/src/: clock.cpp  main.cpp  ui.cpp
user/devices/: devices.cpp
user/edit/: edit.cpp
user/faulttest/: faulttest_illegal.cpp  faulttest_null.cpp
user/fsinfo/: fsinfo.cpp
user/fstest/: fsd_smoke.cpp  netd_smoke.cpp  tls_smoke.cpp
user/guisysinfo/: main.cpp
user/hello/: hello.cpp
user/hello_gui/: hello_gui.cpp
user/include/: viper_colors.h
user/libc/: CMakeLists.txt
user/libc/include/: aio.h  assert.h  cpio.h  ctype.h  dirent.h  errno.h  fcntl.h  fenv.h  fmtmsg.h  fnmatch.h  ftw.h  glob.h  grp.h  iconv.h  inttypes.h  langinfo.h  libgen.h  limits.h  locale.h  math.h  monetary.h  mqueue.h  ndbm.h  netdb.h  nl_types.h  overflow.h  poll.h  pthread.h  pwd.h  regex.h  sched.h  search.h  semaphore.h  setjmp.h  signal.h  spawn.h  stdarg.h  stdbool.h  stddef.h  stdint.h  (+12 more)
user/libc/src/: aio.c  consoled_backend.cpp  crt0.c  ctype.c  dirent.c  errno.c  fenv.c  fmtmsg.c  fnmatch.c  fsd_stubs.c  ftw.c  getopt.c  glob.c  grp.c  iconv.c  inttypes.c  ioctl.c  ipc.c  langinfo.c  libgen.c  locale.c  math.c  mman.c  monetary.c  mqueue.c  msg.c  ndbm.c  netdb.c  new.cpp  nl_types.c  poll.c  pthread.c  pwd.c  random.c  regex.c  resource.c  sched.c  search.c  sem.c  semaphore.c  (+20 more)
user/libgui/: CMakeLists.txt
user/libgui/include/: gui.h
user/libgui/src/: gui.cpp
user/libhttp/: CMakeLists.txt
user/libhttp/include/: http.h
user/libhttp/src/: http.cpp
user/libssh/: CMakeLists.txt  sftp.cpp  ssh.cpp  ssh_auth.cpp  ssh_channel.cpp  ssh_crypto.cpp  ssh_internal.h
user/libssh/include/: sftp.h  ssh.h
user/libtls/: CMakeLists.txt
user/libtls/include/: tls.h
user/libtls/src/: crypto.cpp  tls.cpp
user/libvirtio/: CMakeLists.txt
user/libvirtio/include/: blk.hpp  device.hpp  net.hpp  virtio.hpp  virtqueue.hpp
user/libvirtio/src/: blk.cpp  net.cpp  virtio.cpp  virtqueue.cpp
user/libwidget/: CMakeLists.txt
user/libwidget/include/: widget.h
user/libwidget/src/: button.cpp  checkbox.cpp  dialog.cpp  draw3d.cpp  label.cpp  layout.cpp  listview.cpp  menu.cpp  progressbar.cpp  scrollbar.cpp  (+3 more)
user/libws/: CMakeLists.txt
user/mathtest/: mathtest.cpp
user/netstat/: netstat.cpp
user/ping/: ping.cpp
user/prefs/: main.cpp
user/servers/: CMakeLists.txt
user/sftp/: sftp.cpp
user/shell/: main.cpp  shell_io_pty.cpp  text_buffer_stub.cpp
user/ssh/: ssh.cpp
user/sysinfo/: sysinfo.cpp
user/taskbar/: taskbar.cpp
user/taskman/: main.cpp
user/vedit/: CMakeLists.txt
user/viewer/: CMakeLists.txt
user/vinit/: cmd_fs.cpp  cmd_misc.cpp  cmd_system.cpp  io.cpp  readline.cpp  shell.cpp  vinit.cpp  vinit.cpp.bak  vinit.hpp
user/vshell/: main.cpp
vboot/: CMakeLists.txt  crt0.S  efi.h  fix_pe.py  main.c  vboot.h  vboot.ld
(+235 files in other folders)
